src/components/SignIn.css
.SignInIconsUser {
    color: #50BB27;
    position: absolute;
    margin-left: 3vh;
    margin-top: 2.5vh;
}

.SignInIconsLock {
    color: #50BB27;
    position: absolute;
    margin-left: 3vh;
    margin-top: 2.5vh;
}

.SignInIconsEye {
    color: #50BB27;
    position: absolute;
    margin-left: -6vh;
    margin-top: 2.5vh;
    cursor: pointer;
}

.SignInTitle {
    font-size: 45px;
    font-weight: 600;
    padding-top: 13vh;
    margin-bottom: 5vh;
    margin-left: -5vh;
}

.SignInText {
    font-size: 25px;
    font-weight: 400;
    margin-left: -5vh;
}

.error {
    color: red;
    margin-top: 5px;
    font-size: 12px;
}

.FormCard {
    border-radius: 34px;
    border-width: 1px;
    border-color: linear-gradient(#32920D, #49B51F);
    background-image: linear-gradient(#F4F4F4, #E0FED3);
    padding-top: 11vh;
    padding-bottom: 11vh;
    width: 65vh;
    text-align: center;
    align-content: right;
    position: relative;
    margin-top: 8vh;
}

.SignInFormSubmit {
    background-image: linear-gradient(to right, #1CCA38, #309D06);
    border-radius: 8.41px;
    width: 50vh;
    height: 8vh;
    text-align: center;
    color: white;
    cursor: pointer;
    border: none;
}

.SignInFormInput {
    width: 50vh;
    height: 8vh;
    border-radius: 10px;
    border: 1px solid #ccc;
    box-sizing: border-box;
    padding-left: 8vh;
    margin-bottom: 2.5vh;
    background-color: white;
    font-size: 16px;
    color: #333;
}

.SignInFormInput:focus {
    outline: none;
    border-color: #50BB27;
}

.logoLight {
    text-align: left;
    align-items: left;
    height: 20vh;
    margin-left: -10vh;
}

.logoLightSignInForm {
    height: 8vh;
    margin-bottom: 3vh;
}

.FormContainer {
    text-align: right;
    align-content: right;
}

.SignInFormForgotPassword {
    text-align: right;
    color: #50BB27;
    padding-left: 25vh;
    margin-bottom: 1.5vh;
    cursor: pointer;
}

